--- a/package.json
+++ b/package.json
@@ -8,21 +8,17 @@
     "url": "https://github.com/xops/snaps-openrpc-generator.git"
   },
   "main": "./build/index.js",
-  "bin": {
-    "snaps-openrpc-generator": "./build/cli.js"
-  },
   "files": [
     "build/**/*",
-    "templates/**/*",
     ".node-version"
   ],
   "scripts": {
-    "start": "npm run build && ./build/cli.js",
+    "start": "npm run build",
     "test": "npm run test:lint && npm run test:unit",
     "test:unit": "jest --coverage --passWithNoTests",
-    "test:integration": "npm run build && ./build/cli.js generate -c test-generator-config.json && ((cd ./generated/server/typescript/ && npm install && npm start) & (cd ./generated/client/typescript && npm install && npm run build && cd - && sleep 15 && node ./integration-test.js))",
+    "test:integration": "npm run build && open-rpc-generator generate -c test-generator-config.json",
     "test:lint": "tslint -c tslint.json 'src/**/*.ts' --fix",
-    "build": "npm run build:clean && tsc && chmod +x build/cli.js",
+    "build": "npm run build:clean && tsc && cp -r templates build/",
     "build:clean": "rm -rf build",
     "watch:build": "tsc --watch",
     "watch:test": "jest --watch"
@@ -31,7 +27,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@etclabscore/json-schema-to-types": "^1.10.1",
-    "@iarna/toml": "2.2.3",
+    "@open-rpc/generator": "^1.21.2",
     "@open-rpc/typings": "^1.8.0",
     "commander": "4.1.0",
     "fs-extra": "7.0.1",
@@ -39,19 +35,12 @@
     "lodash": "4.17.15"
   },
   "devDependencies": {
-    "@open-rpc/examples": "^1.3.5",
     "@open-rpc/meta-schema": "^1.6.0",
-    "@open-rpc/schema-utils-js": "^1.12.0",
-    "@open-rpc/server-js": "^1.5.2",
-    "@types/connect": "^3.4.33",
-    "@types/cors": "^2.8.6",
     "@types/fs-extra": "8.0.1",
-    "@types/jest": "25.1.2",
-    "@types/inquirer": "^6.5.0",
-    "@types/lodash": "4.14.149",
+    "@types/lodash": "^4.14.172",
     "jest": "^25.1.0",
     "ts-jest": "25.2.0",
     "tslint": "6.0.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.10"
   }
 }
